fixed bugs and Added image search

--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
         <div class="fa fa-arrow-up" title="click to send"></div>
       </div>
       <div>
-        <h3>Plan an amazing weekend party !</h3>
-        <p>for New Years Eve</p>
+        <h3>Generate images</h3>
+        <p>of cats and dogs</p>
         <div class="fa fa-arrow-up" title="click to send"></div>
       </div>
     </div>
