--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="Gemini-Logo.png" type="image/x-icon" />
     <title>Euphoria</title>
   </head>
   <body>
