change sample queries

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="sampleQuery">
         <div>🔗</div>
-        <h3>/open Reddit</h3>
+        <h3>Suggest some awesome subreddits</h3>
         <!-- <div class="fa fa-arrow-up" title="click to send"></div>÷ -->
       </div>
       <div class="sampleQuery">
@@ -50,7 +50,7 @@
       </div>
       <div class="sampleQuery">
         <div>🐶</div>
-        <h3>Generate images</h3>
+        <h3>What are some most popular breeds</h3>
         <p>of cats and dogs</p>
         <!-- <div class="fa fa-arrow-up" title="click to send"></div>÷ -->
       </div>
