update sample query

--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,8 @@
       </div>
       <div class="sampleQuery">
         <div>🐶</div>
-        <h3>What are some most popular breeds</h3>
-        <p>of cats and dogs</p>
+        <h3>What is a better pet</h3>
+        <p>between cats and dogs</p>
         <!-- <div class="fa fa-arrow-up" title="click to send"></div>÷ -->
       </div>
     </div>
