--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       <div class="sampleQuery">
         <div>🐶</div>
         <h3>What is a better pet</h3>
-        <p>between cats and dogs</p>
+        <p>cat or dog</p>
         <!-- <div class="fa fa-arrow-up" title="click to send"></div>÷ -->
       </div>
     </div>
