--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="sampleQuery">
         <div>🔗</div>
-        <h3>Suggest some awesome subreddits</h3>
+        <h3>/open Reddit</h3>
         <!-- <div class="fa fa-arrow-up" title="click to send"></div>÷ -->
       </div>
       <div class="sampleQuery">
@@ -50,8 +50,8 @@
       </div>
       <div class="sampleQuery">
         <div>🐶</div>
-        <h3>What is a better pet</h3>
-        <p>cat or dog</p>
+        <h3>Generate images</h3>
+        <p>of cats and dogs</p>
         <!-- <div class="fa fa-arrow-up" title="click to send"></div>÷ -->
       </div>
     </div>
