update sample query

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="sampleQuery">
         <div>🍕</div>
-        <h3>How to make pizza?</h3>
+        <h3>Recipe to make pizza</h3>
         <p>at home</p>
         <!-- <div class="fa fa-arrow-up" title="click to send"></div>÷ -->
       </div>
